SIA: csv file working

--- a/app/views/query/simple_image_search/add_file.js.erb
+++ b/app/views/query/simple_image_search/add_file.js.erb
@@ -1,1 +1,83 @@
-alert("hola");
+<% (0..(@url_params.length-1)).each do | i | %>
+	<% url_params = @url_params[i] %>
+	<% params = @params[i] %>
+	<% p params, url_params, "\n" %>
+	$table = $("#query_list_table_tbody");
+	tr_amount = $table.find("tr").size();
+	id = 0;
+	if (tr_amount == 0){
+		id = 1
+	}
+	else {
+		id = parseInt($table.find("tr").last().attr('id')) + 1;	
+	}
+
+	parameters = "Submitted data:";
+	<% params.each do |key, value| %>
+		parameters = parameters + "<br> <%=key.upcase%>:  <%=value%>";
+	<% end %> 
+
+	$newTR = $("<tr id="+id+'> <input type="hidden" name="url_params_'+id+'" value="<%=url_params%>"> <td><%=params[:ra]%>,<%=params[:dec]%></td><td><%=params[:size]%></td><td></td><td></td><td>'+parameters+"</td></tr>");
+	// parameters' td should be hidden originaly, but a pop up must appear on mouseover
+
+	var multi_select = $('<select/>',{
+		id: 'multi_select_resource'+id,
+		multiple: 'multiple',
+		style: 'float:center',
+		name: 'resource_'+id+'[]'
+	});
+
+	var delete_button = $('<a/>',
+    {
+        class: 'btn btn-danger btn-xs',
+        style: 'height:20px',
+        text: '',
+        click: function () {
+        	$(this).closest("tr").remove();
+         }
+    });
+
+	var trash_icon = $('<i/>',{class: 'fa fa-trash-o fa-fw '});
+	delete_button.prepend(trash_icon);
+
+	$newTR.find("td").last().prev().prev().append(multi_select);
+	$newTR.find("td").last().prev().append(delete_button);
+
+	var config = {
+	buttonWidth: '400px',
+	buttonClass: 'btn btn-default btn-sm',
+	includeSelectAllOption: true,
+	enableFiltering: true,
+	maxHeight: 200,
+	checkboxName: '',
+	filterPlaceholder: 'Search',
+	selectedClass: null,
+	onChange: function(option, checked) {	                    
+            var selectedOptions = multi_select.find('option:selected');
+				if (selectedOptions.length == 0) {
+	        	multi_select.multiselect('select', option.val());
+	     	}
+            
+        }
+	}
+
+	multi_select.multiselect(config);
+
+	var data = new Array();
+	<% sources = Rails.cache.read("sia_sources") %>
+	<% sources.each do | key, value | %>
+		var hash = { 
+	    	label: "<%= key[0] %>",
+	    	value: "<%= key[0] %>*@*<%= value[0] %>"
+		};
+		data.push(hash);
+	<% end %>
+
+
+	multi_select.multiselect('dataprovider', data);
+
+	$table.append($newTR);
+<% end %>
+	$( ".form-control" ).each(function() {
+	  $( this ).val( "" );
+	});
