--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -121,11 +121,11 @@
 		</div>
 	<% end %> <!--=== End Form ===-->   
 
-	<%= form_tag "/query/imagesearch", multipart: true, remote: true, class: 'form-horizontal', method: 'post', role: 'form', name: 'csv', id: 'csvForm' do %>
+	<%= form_tag "/query/imagesearch", multipart: true, remote: true, class: 'form-horizontal', id: 'csvForm', authenticity_token: true do %>
 	<div class="form-group">
-		<%= label_tag :file, 'CSV File', class: 'col-sm-4 control-label' %>
+		<%= label_tag :file, 'Import CSV File', class: 'col-sm-4 control-label' %>
 		<div class="col-sm-5" data-popbox='csv'>
-		<%=file_field_tag :file, class: 'form-control'%>
+		<%= file_field_tag :file, :accept => "text/csv", class: 'form-control'%>
 		</div>
 	</div>
 	<div class="form-group">
@@ -134,4 +134,5 @@
 			</div>
 		</div>
 	<% end %> <!--=== End CSV Form ===-->   
+
 </div>
