SCS: updated to new controler

--- a/app/views/query/conesearch.html.erb
+++ b/app/views/query/conesearch.html.erb
@@ -32,10 +32,11 @@
         <%= render 'query/simple_cone_search/query_list' %>
       </div>
       <div class="tab-pane" id="result_table">
-        <%= render 'query/simple_cone_search/result_table' %>
+        <%= render 'query/simple_cone_search/query_result' %>
       </div>
     </div>
   </div>
+<div id="data" ></div>
 </div> <!--== End Content Part ==-->
 <!--=== Form ===-->
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
