--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -1,68 +1,49 @@
-<%= render 'panel_heading' %>
-<div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
-	<strong>Heads up! </strong> This will show the states of actions
+  <%= render 'panel_heading' %>
+  <div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
+  <strong>Heads up! </strong> This will show the states of actions
 </div>
-<div class="panel-body" id="query-form-panel-body">                    
-	<!--=== Form ===-->
-	<%= form_tag "/query/imagesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
-	
-	<!-- SESAME -->
-	<div class="form-group">
-		<%= label_tag :source_name_sesame, 'Source name (Sesame)', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5" data-popbox='source_name_sesame'>
-			<%= text_field_tag :source_name_sesame, nil, class: 'form-control' %>
-		</div>
-		<span class="input-group-btn" style="display:inline-block;margin-left:-3px;">
-			<%= button_tag(type: "submit", class: "btn-u btn-u-default", name: "commit", value:"sesame_search", id: 'sesame_search') do %>
-			    <i class="fa fa-angle-right fa-lg"></i>
-			<% end %>
-		</span>
-	</div>
+ <div class="panel-body" id="query-form-panel-body">                    
+  <!--=== Form ===-->
+  <%= form_tag "/query/conesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
+    
+    <!-- SESAME -->
+    <div class="form-group">
+      <%= label_tag :source_name_sesame, 'Source name (Sesame)', class: 'col-sm-4 control-label' %>
+      <div class="col-sm-5" data-popbox='ra'>
+        <%= text_field_tag :source_name_sesame, nil, class: 'form-control' %>
+      </div>
+      <span class="input-group-btn" style="display:inline-block;margin-left:-3px;">
+        <%= button_tag(type: "submit", class: "btn-u btn-u-default", name: "commit", value:"sesame_search", id: 'sesame_search') do %>
+            <i class="fa fa-angle-right fa-lg"></i>
+        <% end %>
+      </span>
+    </div>
 
-	<!-- ALMA -->
 
-	<div class="form-group">
-		<%= label_tag :source_name_alma, 'Source name (ALMA)', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5" data-popbox='ra'>
-			<%= text_field_tag :source_name_alma, nil, class: 'form-control' %>
-		</div>
-	</div>
 
-	<!-- RA -->
-	<div class="form-group">
-		<%= label_tag :ra, 'RA', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5" data-popbox='ra'>
-			<%= text_field_tag :ra, nil, class: 'form-control' %>
-		</div>
-	</div>
-
-	<!-- DEC -->
-	<div class="form-group">
-		<%= label_tag :dec, 'DEC', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5"  data-popbox='dec'>
-				<%= text_field_tag :dec, nil, class: 'form-control' %>
-		</div>
-	</div>
-
-	<!-- ANG -->
-	<div class="form-group">
-		<%= label_tag :search_radius, 'Search Radius', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5" data-popbox='ang_size'>
-				<%= text_field_tag :search_radius, nil, class: 'form-control' %>
-		</div>
-	</div>
-
-	<div class="form-group">
-		<%= label_tag :submit, '', class: 'col-sm-4 control-label' %>
-		<div class="col-sm-5" data-popbox='submit'>
-		<%= button_tag(type: "submit", name: "commit", class: 'form-control btn btn-default btn-block', value:"plus_position", id: 'plus_position') do %>
-			Add Query
-		<% end %>
-		</div>
-	</div>
-
-	<% end %>
-
+    <div class="form-group">
+      <%= label_tag :ra, 'Right Ascension', class: 'col-sm-4 control-label' %>
+      <div class="col-sm-5" data-popbox='ra'>
+        <%= text_field_tag :ra, nil, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= label_tag :dec, 'Declination', class: 'col-sm-4 control-label' %>
+      <div class="col-sm-5"  data-popbox='dec'>
+          <%= text_field_tag :dec, nil, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= label_tag :size, 'Search Radius', class: 'col-sm-4 control-label' %>
+      <div class="col-sm-5" data-popbox='ang_size'>
+          <%= text_field_tag :sr, nil, class: 'form-control' %>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-5">
+          <%= submit_tag 'Add Query', class: 'btn btn-default btn-block' %>
+      </div>
+    </div>
+  <% end %> <!--=== End Form ===-->   
 </div>
-
-<!--=== End Form ===-->   
