--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -54,11 +54,43 @@
     <%= file_field_tag :file, :accept => "text/csv", class: 'form-control'%>
     </div>
   </div>
+
+  <div id="optional2" style="display:none;">
+
+      <!-- SESAME -->
+    <div class="form-group">
+      <%= label_tag :source_name_sesame, 'Example CSV File', class: 'col-sm-4 control-label' %>
+      <div class="col-sm-5" data-popbox='ra'>
+        <%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sol\";2;2;2\n"+"\"luna\";3;3;3", disabled: 'disabled', size: "2x2" %>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class="text-center" style="margin-left:65px">
+    <a href="javascript:void(0);" onclick="hideShow('optional2')">Example CSV File   
+      <i class="fa fa-sort"></i>
+    </a>
+  </div>
+  <BR>
+
   <div class="form-group">
       <div class="col-sm-offset-4 col-sm-5">
           <%= submit_tag 'Add File to Query', class: 'btn btn-default btn-block' %>
       </div>
     </div>
+
+   <script type="text/javascript">
+      function hideShow(content) {
+       var element=document.getElementById(content);
+         if(element.style.display == 'block') {
+            element.style.display = 'none';
+         } else {
+            element.style.display = 'block';
+         }
+      }
+    </script>
   <% end %> <!--=== End CSV Form ===-->   
 
 </div>
