--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -135,7 +135,7 @@
 		<div class="form-group">
 			<%= label_tag :source_name_sesame, 'Example CSV File', class: 'col-sm-4 control-label' %>
 			<div class="col-sm-5" data-popbox='ra'>
-				<%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sol\";2;2;2\n"+"\"luna\";3;3;3", disabled: 'disabled', size: "2x2" %>
+				<%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sun\";2;2;2\n"+"\"moon\";3;3;3", disabled: 'disabled', size: "2x2" %>
 			</div>
 		</div>
 
