--- a/app/views/query/simple_spectral_search/_query_form.html.erb
+++ b/app/views/query/simple_spectral_search/_query_form.html.erb
@@ -150,7 +150,7 @@
     <div class="form-group">
       <%= label_tag :source_name_sesame, 'Example CSV File', class: 'col-sm-4 control-label' %>
       <div class="col-sm-5" data-popbox='ra'>
-        <%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sol\";2;2;2;3;3\n"+"\"luna\";4;4;4;5;5", disabled: 'disabled', size: "2x2" %>
+        <%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sun\";2;2;2;3;3\n"+"\"moon\";4;4;4;5;5", disabled: 'disabled', size: "2x2" %>
       </div>
     </div>
 
