--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -1,9 +1,10 @@
   <%= render 'panel_heading' %>
   <div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
-  <strong>Heads up! </strong> This will show the states of actions
+    <strong>Heads up! </strong> This will show the states of actions 
 </div>
  <div class="panel-body" id="query-form-panel-body">                    
   <!--=== Form ===-->
+
   <%= form_tag "/query/conesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
     
     <!-- SESAME -->
@@ -60,7 +61,7 @@
       <!-- SESAME -->
     <div class="form-group">
       <%= label_tag :source_name_sesame, 'Example CSV File', class: 'col-sm-4 control-label' %>
-      <div class="col-sm-5" data-popbox='ra'>
+      <div class="col-sm-5" data-popbox='ex'>
         <%= text_area :source_name_sesame, nil, class: 'form-control', value: "\"sun\";2;2;2\n"+"\"moon\";3;3;3", disabled: 'disabled', size: "2x2" %>
       </div>
     </div>
