--- a/app/views/query/_pop_boxes.html.erb
+++ b/app/views/query/_pop_boxes.html.erb
@@ -7,7 +7,7 @@
 	<strong>Example</strong> 
 	<p>L-List of examples</p>              
 </div>
-<div id="source_name_sesame" class="popbox">
+<div id="sesame_info" class="popbox">
 	<strong>Souce name (Sesame)</strong> 
 	<p>Source name to be resolved with <a href="http://cdsweb.u-strasbg.fr/cgi-bin/Sesame" target="_blank">Sesame</a></p><br>
 	<strong>Description</strong> 
@@ -20,13 +20,14 @@
 </div>
 
 <div id="ra" class="popbox">
-	<strong>RA</strong> 
-	<p>Right Ascension</p> 
+	<strong>Right Ascension (RA)</strong> 
+	<br>
 	<strong>Description</strong> 
 	<p> Right Ascension (RA) either in decimal degrees, or in 
 		Hours:Minutes:Seconds</p> 
 	<strong>Unit</strong> 
 	<p>Hours:Minutes:Seconds and Degrees:Minutes:Seconds</p>
+	<p> Range:  0.0 to 1000.0 </p>
 	<strong>Example</strong> 
 	<p>04:18:21.27</p>
 	<p>064.5886550</p>
