--- a/app/views/query/conesearch.html.erb
+++ b/app/views/query/conesearch.html.erb
@@ -1,6 +1,7 @@
 <%= javascript_include_tag "services/simple_cone_search" %>
 <%= javascript_include_tag "form_options/option" %>
 <%= javascript_include_tag "form_options/size_panel" %>
+<%= javascript_include_tag "queries/SCS/param_check" %>
 
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
