--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -10,7 +10,7 @@
     <!-- SESAME -->
     <div class="form-group">
       <%= label_tag :source_name_sesame, 'Source name (Sesame)', class: 'col-sm-4 control-label' %>
-      <div class="col-sm-5" data-popbox='ra'>
+      <div class="col-sm-5" data-popbox='sesame_info'>
         <%= text_field_tag :source_name_sesame, nil, class: 'form-control' %>
       </div>
       <span class="input-group-btn" style="display:inline-block;margin-left:-3px;">
@@ -43,7 +43,7 @@
     
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-5">
-          <%= submit_tag 'Add Query', class: 'btn btn-default btn-block' %>
+          <%= submit_tag 'Add Query', class: 'btn btn-default btn-block', id: 'sesame_input' %>
       </div>
     </div>
   <% end %> <!--=== End Form ===-->   
