--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -43,7 +43,7 @@
     
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-5">
-          <%= submit_tag 'Add Query', class: 'btn btn-default btn-block', id: 'sesame_input' %>
+          <%= submit_tag 'Add Query', class: 'btn btn-default btn-block' %>
       </div>
     </div>
   <% end %> <!--=== End Form ===-->   
