--- a/app/views/query/_panel_heading.html.erb
+++ b/app/views/query/_panel_heading.html.erb
@@ -2,7 +2,7 @@
 <div class="panel-heading" >                
     <h3 class="panel-title" >
         <i class="fa fa-tasks fa-lg" > </i>
-        <!-- <a href="#" id="form_info" ><i class="fa fa-info-circle fa-lg"></i></a> -->
+        <a href="#" id="form_info" ><i class="fa fa-info-circle fa-lg"></i></a>
     </h3>
 
 </div> <!--/panel-heading-->
