Añadidos links a las instituciones

--- a/app/views/home/institutions.html.erb
+++ b/app/views/home/institutions.html.erb
@@ -18,13 +18,13 @@
         <h2>Participating Institutions</h2>
       </div>
       <ul class="list-unstyled">
-        <li><%= fa_icon "book" %> UNIVERSIDAD TECNICA FEDERICO SANTA MARIA</li>
-        <li><%= fa_icon "book" %> UNIVERSIDAD DE CHILE</li>
-        <li><%= fa_icon "book" %> PONTIFICIA UNIVERSIDAD CATOLICA DE CHILE</li>
-        <li><%= fa_icon "book" %> UNIVERSIDAD DE CONCEPCION</li>
-        <li><%= fa_icon "book" %> UNIVERSIDAD DE SANTIAGO DE CHILE</li>
-        <li><%= fa_icon "book" %> ALMA</li>
-        <li><%= fa_icon "book" %> CONSORCIO RED UNIVERSITARIA NACIONAL REUNA</li>
+        <li><%= fa_icon "book" %> <%= link_to 'UNIVERSIDAD TECNICA FEDERICO SANTA MARIA', 'http://www.usm.cl' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'UNIVERSIDAD DE CHILE', 'http://http://www.uchile.cl/' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'PONTIFICIA UNIVERSIDAD CATOLICA DE CHILE', 'http://www.uc.cl' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'UNIVERSIDAD DE CONCEPCION', 'https://www.udec.cl' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'UNIVERSIDAD DE SANTIAGO DE CHILE', 'http://www.usach.cl/' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'ALMA' , 'http://www.almaobservatory.org/' %></li>
+        <li><%= fa_icon "book" %> <%= link_to 'CONSORCIO RED UNIVERSITARIA NACIONAL REUNA' ,'http://www.reuna.cl/' %></li>
       </ul>
     </div>
 
