comentadas rutas de vistas no utilizadas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
                 <%= link_to 'Spectral Search', query_spectralsearch_path %>
               </li>
               <li>
-                <%= link_to 'All Searches', query_all_searches_path %>
+                <%#<%= link_to 'All Searches', query_all_searches_path %>
               </li>
             </ul>
           </li>
