Confirmaciones en process query y eliminado select all en lista de Vo

--- a/app/views/query/simple_cone_search/add_query.js.erb
+++ b/app/views/query/simple_cone_search/add_query.js.erb
@@ -65,7 +65,7 @@ if ($pass) {
     var config = {
         buttonWidth: '400px',
         buttonClass: 'btn btn-default btn-sm',
-        includeSelectAllOption: true,
+        includeSelectAllOption: false,
         enableFiltering: true,
         maxHeight: 200,
         checkboxName: '',
