--- a/app/views/query/simple_image_search/add_file.js.erb
+++ b/app/views/query/simple_image_search/add_file.js.erb
@@ -46,7 +46,7 @@
 	var config = {
 	buttonWidth: '400px',
 	buttonClass: 'btn btn-default btn-sm',
-	includeSelectAllOption: true,
+	includeSelectAllOption: false,
 	enableFiltering: true,
 	maxHeight: 200,
 	checkboxName: '',
