--- a/app/views/query/simple_cone_search/_query_list.html.erb
+++ b/app/views/query/simple_cone_search/_query_list.html.erb
@@ -1,6 +1,8 @@
 <%= render 'panel_heading' %>
-<div id="list-panel-body" class="panel-body">                    
-	
+<div id="list-panel-body" class="panel-body">
+
+    <div id="process_state" class="alert fade in alert-info hidden" style="margin-bottom:0px" >
+    </div>
 	<!--=== Form ===-->
   <%= form_tag "/query/conesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm' do %>
 		<i id="estate_process_query_list" class="" style="display:inline-block; margin-left:10px;"></i>
