busqueda case insensitive en search de vo

--- a/app/views/query/simple_cone_search/add_query.js.erb
+++ b/app/views/query/simple_cone_search/add_query.js.erb
@@ -65,6 +65,7 @@ if ($pass) {
     var config = {
         buttonWidth: '400px',
         buttonClass: 'btn btn-default btn-sm',
+        enableCaseInsensitiveFiltering: true,
         includeSelectAllOption: false,
         enableFiltering: true,
         maxHeight: 200,
