--- a/app/views/query/simple_image_search/add_query.js.erb
+++ b/app/views/query/simple_image_search/add_query.js.erb
@@ -75,6 +75,7 @@ if ($pass){
         buttonWidth: '400px',
         buttonClass: 'btn btn-default btn-sm',
         includeSelectAllOption: true,
+        enableCaseInsensitiveFiltering: true,
         enableFiltering: true,
         maxHeight: 200,
         checkboxName: '',
