--- a/app/views/query/simple_spectral_search/add_query.js.erb
+++ b/app/views/query/simple_spectral_search/add_query.js.erb
@@ -74,6 +74,7 @@ if ($pass){
         buttonWidth: '400px',
         buttonClass: 'btn btn-default btn-sm',
         includeSelectAllOption: false,
+        enableCaseInsensitiveFiltering: true,
         enableFiltering: true,
         maxHeight: 200,
         checkboxName: '',
