Las tablas tienen link que se pueden clickear

--- a/app/views/query/simple_cone_search/results_panel.js.erb
+++ b/app/views/query/simple_cone_search/results_panel.js.erb
@@ -31,5 +31,18 @@ function update_process_state (add_class, strong, text) {
 	$('#resource_list').append($li);
 	$('#resource_content').append($tab);
 
+	var table = document.getElementById("resource_<%= index %>_data");
+        for (var i = 0; i < table.rows.length ; i++) {
+                row = table.rows[i];
+                for (var j = 0; j < row.cells.length ; j++ ){
+                        cell = row.cells[j]
+                        if(cell.innerHTML.search("http")!=-1){
+                                var url = cell.innerHTML;
+                                url='<a href=' + url + '>' + url + '</a>';
+                                cell.innerHTML = url;
+                        }
+                }
+        }
+
 <% end %>
 update_process_state("alert-success", "Well done!", "your query has been processes successfully");
