--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-md-6">      
         <p class="copyright-space">
-          2013 &copy; ChiVO. ALL Rights Reserved. 
+          2013 -2015 &copy; ChiVO v0.1.1. ALL Rights Reserved. 
           <!-- <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> -->
         </p>
     </div>
