--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,18 +71,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to image_tag("logo1-default.png", width: '130px'), root_path, class: 'navbar-brand' %>
+        <%= link_to image_tag("logoCHIVO-h260.png", width: '180px'), root_path, class: 'navbar-brand' %>
       
       </div>
-      <h4 class="chivo-title navbar-header">Chilean Virtual Observatory</h4>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'index' %>">
-            <%= link_to 'Home', root_path %>
-          </li>
-          <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'institutions' %>">
-            <%= link_to 'Institutions', institutions_path %>
+            <%= link_to 'Home', "http://chivo.cl"  %>
           </li>
           <li class="dropdown <%= 'active' if controller.controller_name == 'query' and controller.action_name == 'index' %>">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">
@@ -103,26 +99,6 @@
                 <%#<%= link_to 'All Searches', query_all_searches_path %>
               </li>
             </ul>
-          </li>
-          <!-- form resources -->
-          <li class="dropdown <%= 'active' if controller.controller_name == 'news' and controller.action_name == 'index' %>">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">
-              Resources
-              <%= fa_icon 'angle-down' %>
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <%= link_to 'All News', all_news_path %>
-              </li>
-              <li>
-                <%= link_to 'Undergraduate Thesis', undergraduate_thesis_path %>
-              </li>
-            </ul>
-          </li>
-          <!-- end form resources -->
-          <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'about' %>">
-            <%= link_to 'About Us', about_path %>
-          </li>
         </ul>
       </div><!-- /navbar-collapse -->
     </div>  
