--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
-/* 
+/*
  * This file is part of ChiVO, the Chilean Virtual Observatory
  * A project sponsored by FONDEF (D11I1060)
- * Copyright (C) 2015 
+ * Copyright (C) 2015
  *      Universidad Tecnica Federico Santa Maria Mauricio Solar
  *                                               Marcelo Mendoza
  *      Universidad de Chile                     Diego Mardones
@@ -9,9 +9,9 @@
  *      Universidad de Concepcion                Ricardo Contreras
  *      Universidad de Santiago                  Victor Parada
  *
- * This program is free software; you can redistribute it and/or modify 
- * it under the terms of the GNU General Public License as published by 
- * the Free Software Foundation; either version 2 of the License, or 
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
  * (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
@@ -21,11 +21,11 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  * 02110-1301, USA or visit <http://www.gnu.org/licenses/>.
 */
 
-
+@import "bootstrap";
 @import "unify/style";
 @import "headers/header1";
 @import "unify/responsive";
