--- a/app/assets/stylesheets/voview.css.scss
+++ b/app/assets/stylesheets/voview.css.scss
@@ -25,7 +25,7 @@
  * 02110-1301, USA or visit <http://www.gnu.org/licenses/>.
 */
 
-
+body{
 	// font-size: 100%;
 	color: #000;
 	background-color: #fff;
