--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,23 +65,7 @@
             <li><a href="page_faq.html">Help</a></li>  
             <li class="devider"></li>   
             <li><a href="page_login.html">Login</a></li>    -->
-            <% if user_signed_in? %>
-              <li>
-                <%= link_to('Edit registration', edit_user_registration_path) %>
-              </li>
-              <li class="devider"></li> 
-              <li>
-              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-              </li>
-            <% else %>
-              <li>
-                <%= link_to('Register', new_user_registration_path)  %>
-              </li>
-              <li class="devider"></li> 
-              <li>
-                <%= link_to('Login', new_user_session_path)  %>  
-              </li>
-            <% end %> 
+
         </ul>
     </div>      
 </div><!--/top-->
@@ -99,12 +83,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to image_tag("logoCHIVO-h260.png", width: '180px'), root_path, class: 'navbar-brand' %>
+        <%= link_to image_tag("logoCHIVO-h260.png", width: '180px'), "http://chivo.cl", class: 'navbar-brand' %>
       
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-center">
           <li class="dropdown <%= 'active' if controller.controller_name == 'home' and controller.action_name == 'index' %>">
             <%= link_to 'Home', "http://chivo.cl"  %>
           </li>
