--- a/app/views/query/simple_cone_search/results_panel.js.erb
+++ b/app/views/query/simple_cone_search/results_panel.js.erb
@@ -73,4 +73,4 @@ function update_process_state (add_class, strong, text) {
         }
 
 <% end %>
-update_process_state("alert-success", "Well done!", "your query has been processes successfully");
+update_process_state("alert-success", "Well done!", "your query has been processed successfully");
