--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -27,7 +27,7 @@
 
 
 <%= render 'panel_heading' %>
- <div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
+ <div id="actions_states" class="alert fade in alert-info hidden" style="margin-bottom:0px">
 
   		<strong>Heads up! </strong> This will show the states of actions
 
