--- a/app/views/query/simple_image_search/_query_list.html.erb
+++ b/app/views/query/simple_image_search/_query_list.html.erb
@@ -30,7 +30,7 @@
 <div id="list-panel-body" class="panel-body"> 
 
 	<!--=== Messages ===-->
-	<div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
+	<div id="process_states" class="alert fade in alert-info hidden" style="margin-bottom:0px">
 		<strong>Heads up! </strong> This will show the states of actions
 	</div>
 
