--- a/app/views/query/simple_spectral_search/results_panel.js.erb
+++ b/app/views/query/simple_spectral_search/results_panel.js.erb
@@ -29,6 +29,18 @@
 $("#estate_process_query_list").removeClass("fa fa-spinner fa-spin fa-lg");
 $('#resource_list').find('li').remove();
 $('#resource_content').children('div').remove();
+
+
+$process_state = $('#process_states')
+
+function update_process_state (add_class, strong, text) {
+    $process_state.removeClass("alert-warning alert-success alert-danger alert-info hidden")
+            .addClass(add_class).text("")
+            .append("<strong></strong> " + text)
+            .find("strong").text(strong);
+}
+
+
 <% @votables.each_with_index do |(key, value), index| %>
 
 	$("#query_result").append($('<div class="resource_<%= index %>"></div>'));
@@ -63,3 +75,4 @@ $('#resource_content').children('div').remove();
 	}
 
 <% end %>
+update_process_state("alert-success", "Well done!", "your query has been processed successfully");
