--- a/app/views/query/simple_image_search/results_panel.js.erb
+++ b/app/views/query/simple_image_search/results_panel.js.erb
@@ -30,7 +30,14 @@ $("#estate_process_query_list").removeClass("fa fa-spinner fa-spin fa-lg");
 $('#resource_list').find('li').remove();
 $('#resource_content').children('div').remove();
 
+$process_state = $('#process_states')
 
+function update_process_state (add_class, strong, text) {
+    $process_state.removeClass("alert-warning alert-success alert-danger alert-info hidden")
+            .addClass(add_class).text("")
+            .append("<strong></strong> " + text)
+            .find("strong").text(strong);
+}
 
 <% @votables.each_with_index do |(key, value), index| %>
 
@@ -39,7 +46,7 @@ $('#resource_content').children('div').remove();
 	myVoview =  new voview({input: {form: "searchForm"}, widgetID: "resource_<%= index %>"});
 	myVoview.renderObject.enableRowSelection();
 	myVoview.gotVotable($.parseXML("<%= escape_javascript(value) %>"));
-	
+
 	$resource = $('.resource_<%= index %>');
 
 	$li = $("<li></li>");
@@ -66,3 +73,6 @@ $('#resource_content').children('div').remove();
         }
 
 <% end %>
+
+update_process_state("alert-success", "Well done!", "your query has been processed successfully");
+
