--- a/app/views/query/simple_spectral_search/_query_list.html.erb
+++ b/app/views/query/simple_spectral_search/_query_list.html.erb
@@ -27,8 +27,13 @@
 
 
 <%= render 'panel_heading' %>
-<div id="list-panel-body" class="panel-body">                    
-	
+<div id="list-panel-body" class="panel-body">
+
+    <!--=== Messages ===-->
+    <div id="process_states" class="alert fade in alert-info hidden" style="margin-bottom:0px">
+        <strong>Heads up! </strong> This will show the states of actions
+    </div>
+
 	<!--=== Form ===-->
   <%= form_tag "/query/spectralsearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm' do %>
 		<i id="estate_process_query_list" class="" style="display:inline-block; margin-left:10px;"></i>
