--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -52,7 +52,7 @@
                   </div>
                   <%= devise_error_messages! %>
                   <div class="input-group margin-bottom-20">
-                      <span class="input-group-addon"><i class="fa fa-envelope"></i></i></span>
+                      <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                       <%= f.email_field :email, :autofocus => true,placeholder: "Email", class: 'form-control' %>
                       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
                         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
