--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,7 +36,7 @@
             <li><a href="">Pages</a></li>
             <li class="active">Register</li>
         </ul>
-    </div><!--/container-->
+    </div><!--/container-->z
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
 
