--- a/app/views/query/_pop_boxes.html.erb
+++ b/app/views/query/_pop_boxes.html.erb
@@ -36,7 +36,7 @@
 	<p>L-List of examples</p>              
 </div>
 <div id="sesame_info" class="popbox">
-	<strong>Souce name (Sesame)</strong> 
+	<strong>Source name (Sesame)</strong>
 	<p>Source name to be resolved with <a href="http://cdsweb.u-strasbg.fr/cgi-bin/Sesame" target="_blank">Sesame</a></p><br>
 	<strong>Description</strong> 
 	<p>We use the external resolver Sesame to obtain
@@ -44,6 +44,7 @@
 			NED and VizieR services.</p><br>
 	<strong>Example</strong> 
 	<p>M87</p>
+    <p>Orion</p>
 	<p>NGC3375</p>
 </div>
 
@@ -51,39 +52,36 @@
 	<strong>Right Ascension (RA)</strong> 
 	<br>
 	<strong>Description</strong> 
-	<p> Right Ascension (RA) either in decimal degrees, or in 
-		Hours:Minutes:Seconds</p> 
+	<p> Right Ascension (RA) either in decimal degrees</p>
 	<strong>Unit</strong> 
-	<p>Hours:Minutes:Seconds and Degrees:Minutes:Seconds</p>
+	<p>Decimal degrees</p>
 	<p> Range:  0.0 to 1000.0 </p>
 	<strong>Example</strong> 
-	<p>04:18:21.27</p>
-	<p>064.5886550</p>
-	<p>04:18:21.27</p>
-	<p>064.5886550</p>             
+	<p>32.5</p>
+	<p>697</p>
 </div>
 
 <div id="dec" class="popbox">
 	<strong>Dec</strong> 
 	<p>Declination</p>
 	<strong>Description</strong> 
-	<p>Declination, +Degrees:Minutes:Seconds</p>
+	<p>Declination, +Degrees</p>
 	<strong>Unit</strong> 
-	<p>Degrees:Arcminutes:Arcseconds</p>
+	<p>Degrees</p>
 	<strong>Example</strong> 
-	<p>+38:01:35.7</p>
-	<p>+38.0266111</p>
-	<p>+38.0266111</p>
-	<p>+38:01:35.7</p>        
+	<p>+12.3911231  </p>
+	<p>-5.39111111</p>
+	<p>-09.9413056</p>
 </div>
 
 <div id="ang_size" class="popbox">
 	<strong>ANG</strong> 
-	<p>Description of control label</p> 
+	<p>Circunference radius to be used in the search</p>
 	<strong>Unit</strong> 
-	<p>Unit of measure</p>
+	<p>Degrees</p>
 	<strong>Example</strong> 
-	<p>L-List of examples</p>              
+	<p>33</p>
+    <p>128</p>
 </div>
 <!--=== End Pop Boxes ===-->
 
