--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -39,7 +39,7 @@
 		<!-- SESAME -->
 		<div class="form-group">
 			<%= label_tag :source_name_sesame, 'Source name (Sesame)', class: 'col-sm-4 control-label' %>
-			<div class="col-sm-5" data-popbox='ra'>
+			<div class="col-sm-5" data-popbox='sesame_info'>
 				<%= text_field_tag :source_name_sesame, nil, class: 'form-control' %>
 			</div>
 			<span class="input-group-btn" style="display:inline-block;margin-left:-3px;">
